# SysProg

./: .gitmodules  CMakeLists.txt  README.md  antivirus.cpp  encrypt.c
for_tests/: encrypt.py
include/: database.hpp  database_fwd.hpp  file.hpp  file_fwd.hpp  file_list.hpp  process.hpp  process_fwd.hpp  settings.hpp  types.hpp  utils.hpp
include/tables/: actions.hpp  blacklist.hpp  files.hpp  files_content.hpp  files_hash.hpp  list.hpp  utils.hpp  whitelist.hpp
src/: database.cpp  file.cpp  file_list.cpp  lists.cpp  main.cpp  process.cpp  settings.cpp  test.cpp  utils.cpp
src/tables/: actions.cpp  blacklist.cpp  files.cpp  files_content.cpp  files_hash.cpp  list.cpp  utils.cpp  whitelist.cpp
